# cross-vm-testing

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  LICENSE  Makefile  README.md  SPEC.md  deny.toml  generic-cli-plan.md  implementation.md  multi-native-balance-implementation.md
contracts/cosmwasm/: Cargo.toml  Makefile
contracts/cosmwasm/contracts/counter/: Cargo.toml
contracts/cosmwasm/contracts/ping-pong/: Cargo.toml
contracts/cosmwasm/contracts/vault/: Cargo.toml
contracts/cosmwasm/counter/: Cargo.toml
contracts/cosmwasm/counter/.cargo/: config.toml
contracts/cosmwasm/counter/src/: lib.rs
contracts/cosmwasm/ping-pong/: Cargo.toml
contracts/cosmwasm/ping-pong/src/: lib.rs
contracts/cosmwasm/vault/: Makefile
contracts/cosmwasm/vault/src/: contract.rs  lib.rs
contracts/solana/programs/ping-pong/: Cargo.toml
contracts/solana/programs/vault/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: chain.rs  duration.rs  interpolate.rs  lib.rs  merge.rs  schema.rs  target.rs  validate.rs  value.rs
crates/config/tests/: loader_pipeline.rs  schema.rs
crates/config/tests/fixtures/: bad_cases_zero.toml  bad_duplicate_label.toml  bad_empty_chain_kind.toml  bad_gas_adjustment.toml  bad_missing_cosmwasm_field.toml  bad_rpc_without_url.toml  bad_suite_missing_profile.toml  bad_unknown_selection_label.toml  bad_unknown_target_label.toml  good_full.toml  good_targets_label_merge.toml  good_with_replay.toml  warn_defaults_stripped.toml
crates/core/: Cargo.toml
crates/core/src/: chain_kind.rs  chain_provider.rs  chain_spec.rs  error.rs  fund_error.rs  lib.rs  time.rs  wallet.rs  wallet_lock.rs
crates/cosmwasm/: Cargo.toml
crates/cosmwasm/examples/: cosmwasm_quickstart.rs  cosmwasm_rpc_quickstart.rs
crates/cosmwasm/src/: asset.rs  batch.rs  chain.rs  chains.rs  contract.rs  error.rs  lib.rs  msg.rs  provider.rs  tests.rs  transport.rs  wallet.rs
crates/cosmwasm/src/chains/: info.rs  mod.rs  presets.rs  sugar.rs
crates/cosmwasm/src/provider/: mock.rs  mod.rs  rpc.rs
crates/cosmwasm/tests/: counter.rs  onchain.rs  rpc.rs  typed_handle.rs  vault.rs  version_collision.rs
crates/framework/: Cargo.toml
crates/framework/examples/: env_quickstart.rs  wallet_quickstart.rs
crates/framework/src/: any_chain.rs  cli.rs  error.rs  lib.rs  prelude.rs  shortfall.rs  tests.rs  wallets.rs
crates/framework/src/config/: artifact.rs  build_chain.rs  domain.rs  erased.rs  mod.rs  registry.rs  report.rs  resolve.rs  setup_request.rs  test_bridge.rs
crates/framework/src/contract/: account.rs  base.rs  hooks.rs  mod.rs  response.rs
crates/framework/src/env/: mod.rs  multi_chain_env.rs  phase.rs  setup.rs
crates/framework/src/fund/: fund_target.rs  mod.rs  pending.rs
crates/framework/src/harness/: classify.rs  ctx.rs  mod.rs  (+4 more)
crates/framework/tests/: partial_impl.rs  tron_e2e.rs  wallet_roster_env_any.rs
crates/harness/: Cargo.toml  README.md
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: artifact.rs  cli.rs  domain.rs  erased.rs  lib.rs  registry.rs  report.rs  resolve.rs  test_bridge.rs  test_mock.rs
crates/harness-cli/tests/: generic_bridge.rs
crates/harness-config/: Cargo.toml
crates/harness-config/src/: duration.rs  ext.rs  interpolate.rs  lib.rs  merge.rs  schema.rs  seed.rs  validate.rs  value.rs
crates/harness-config/tests/: loader_pipeline.rs
crates/harness-macros/: Cargo.toml
crates/harness-macros/src/: lib.rs  op_doc.rs  runner_macros.rs
crates/harness/src/: lib.rs  opset.rs  outcome.rs  rng.rs  runner.rs  stats.rs
crates/harness/tests/: math.rs  opset.rs  pure_function.rs
crates/macros/: Cargo.toml
crates/macros/src/: config_runner.rs  cw_fns.rs  cw_interface.rs  lib.rs  wallet_roster.rs
crates/revm-common/: Cargo.toml
crates/revm-common/src/: lib.rs
crates/solana/: Cargo.toml
crates/solana/examples/: solana_quickstart.rs  solana_rpc_quickstart.rs
crates/solana/src/: asset.rs  chain.rs  chains.rs  error.rs  lib.rs  provider.rs  tests.rs  wallet.rs
crates/solana/tests/: rpc.rs  transfer.rs
crates/solidity/: Cargo.toml
crates/solidity/examples/: evm_quickstart.rs  evm_rpc_quickstart.rs
crates/solidity/src/: asset.rs  chain.rs  chains.rs  error.rs  lib.rs  provider.rs  tests.rs  transport.rs  wallet.rs
crates/solidity/tests/: counter.rs  onchain.rs  rpc.rs
crates/tron/: Cargo.toml
crates/tron/src/: asset.rs  chain.rs  error.rs  lib.rs  wallet.rs
crates/tron/tests/: onchain.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs  wallets.rs
examples/cosmos-tests/: Cargo.toml  counter.cross-vm.toml
examples/cosmos-tests/src/: counter.rs  lib.rs
examples/cosmos-tests/tests/: cli_e2e.rs  config_runner.rs  harness.rs
examples/cosmwasm-contracts/counter/: Cargo.toml  Makefile
examples/cosmwasm-contracts/vault/: Cargo.toml
examples/cross-vm-tests/: Cargo.toml  boom.cross-vm.toml  counter.cross-vm.toml  vault.cross-vm.toml  vault.no-chains.cross-vm.toml
examples/cross-vm-tests/src/: boom.rs  counter.rs  lib.rs  vault.rs
examples/cross-vm-tests/tests/: cli_e2e.rs
examples/evm-tests/: Cargo.toml  counter.cross-vm.toml
examples/evm-tests/src/: counter.rs  lib.rs
examples/evm-tests/tests/: cli_e2e.rs  config_runner.rs  harness.rs
examples/integration-tests/: Cargo.toml  boom.cross-vm.toml  vault.cross-vm.toml
examples/integration-tests/src/: lib.rs  vault.rs
examples/integration-tests/tests/: cli_e2e.rs
examples/math-tests/: Cargo.toml  math.harness.toml
examples/math-tests/src/: lib.rs
examples/math-tests/tests/: cli_e2e.rs  config_driven.rs
examples/scripts/: Cargo.toml  deploy_counter.cross-vm.toml
examples/scripts/deploy_counter/: artifacts.rs  contract.rs  main.rs
examples/solana-tests/: Cargo.toml  counter.cross-vm.toml
examples/solana-tests/src/: counter.rs  lib.rs
examples/solana-tests/tests/: cli_e2e.rs  config_runner.rs  harness.rs
examples/tvm-tests/: Cargo.toml  counter.cross-vm.toml
examples/tvm-tests/src/: counter.rs  lib.rs
examples/tvm-tests/tests/: cli_e2e.rs  config_runner.rs  harness.rs
(+143 files in other folders)
