[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/config",
    "crates/revm-common",
    "crates/cosmwasm",
    "crates/solidity",
    "crates/solana",
    "crates/tron",
    "crates/framework",
    "crates/macros",
    # Reusable contract bindings (mocks) + shared test helpers for the example test crates.
    "examples/common",
    # Per-VM example test crates: one Counter harness each, driven three ways (harness/config/CLI).
    "examples/evm-tests",
    # Multi-chain integration & example tests, co-located with the contract artifacts they embed.
    "examples/cross-vm-tests",
]
# Example contracts (now under `contracts/`) are standalone crates (their own workspaces / build
# toolchains); they are consumed by tests via path dependencies but must not be workspace members.
# The explicit `examples/` members above override this exclude for those subdirectories.
exclude = [
    "contracts",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Floor set by the locked dependency tree (revm-state 41 requires 1.91); verified in CI by the
# msrv job. Bump alongside dependency upgrades that raise the floor.
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/Anshudhar/cross-vm-testing"
homepage = "https://github.com/Anshudhar/cross-vm-testing"
readme = "README.md"
keywords = ["testing", "cosmwasm", "evm", "solana", "smart-contracts"]
categories = ["development-tools::testing"]

[workspace.lints.rust]
# Rustdoc coverage is a design feature of this codebase; keep it enforced, not conventional.
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
# Deliberate: the Mock variants hold a full in-process VM, the Rpc variants a thin client.
# Boxing the mock would ripple &mut self borrows through every provider method for no gain.
large_enum_variant = "allow"

[workspace.dependencies]
# Internal. The `version` alongside `path` keeps every crate publishable: cargo uses the path
# locally and the version on crates.io (path-only deps are stripped at publish time and fail
# the dry run). Keep in step with [workspace.package] version.
cross-vm-core = { path = "crates/core", version = "0.1.0" }
cross-vm-config = { path = "crates/config", version = "0.1.0" }
cross-vm-macros = { path = "crates/macros", version = "0.1.0" }
cross-vm-revm-common = { path = "crates/revm-common", version = "0.1.0" }
cross-vm-cosmwasm = { path = "crates/cosmwasm", version = "0.1.0" }
cross-vm-solidity = { path = "crates/solidity", version = "0.1.0" }
cross-vm-solana = { path = "crates/solana", version = "0.1.0" }
cross-vm-tron = { path = "crates/tron", version = "0.1.0" }

# Proc-macro toolkit
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Shared
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
# TOML parsing for the declarative run-config crate (cross-vm-config).
toml = "0.8"
# Duration string parsing (humantime grammar) for the run-config crate.
humantime = "2"
# CLI argument parsing; only reached via the framework's `cli` feature in later phases.
clap = { version = "4", features = ["derive"] }
# Structured leveled logging: facade in the libs, subscriber wired by the test binary.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Wallets: .env secret loading (no process-env mutation) + BIP-39 mnemonic gen/parse.
dotenvy = "0.15"
bip39 = { version = "2", features = ["rand"] }
# Raw private-key decoding for the EnvPrivateKey wallet source (hex on EVM/Cosmos; Solana decodes base58 natively).
hex = "0.4"

# CosmWasm
cw-multi-test = "2"
cosmwasm-std = "2"
# Live RPC (cosmos): tendermint-rpc transport + cosmos/cosmwasm protobuf query types.
cosmrs = { version = "0.21", features = ["rpc", "cosmwasm", "bip32"] }
prost = "0.13"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# EVM / Solidity
revm = "41"
alloy = { version = "2", features = ["full", "sol-types"] }
alloy-primitives = "1"
alloy-chains = "0.2"
# Local signer with BIP-39 mnemonic derivation; the `mnemonic` feature pulls in coins-bip39,
# which alloy's `full` does not enable. Shared by the EVM and Tron providers (same curve).
alloy-signer-local = { version = "2", features = ["mnemonic"] }

# Tron address codec + hashing (generic crates; NOT Tron-specific dependencies).
bs58 = "0.5"
sha2 = "0.10"
sha3 = "0.11"
k256 = "0.13"

# Solana
litesvm = "0.13"
solana-sdk = "4"
solana-program = "4"
solana-system-interface = { version = "2", features = ["bincode"] }

# Property testing: portable, seedable RNG (ChaCha) for deterministic, replayable runs, plus
# the optional `arbitrary` path for stateless op generation.
rand = "0.8"
rand_chacha = "0.3"
arbitrary = { version = "1", features = ["derive"] }

# Test-layer helpers (integration-tests).
rstest = "0.26"
base64 = "0.22"
