[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.dependencies]
cosmwasm-std = "2"
cw-storage-plus = "2"
serde = { version = "1", default-features = false, features = ["derive"] }
# Cross-VM typed message handles (off for the wasm build; on for host tests). Consumed by
# counter + vault only, gated behind each crate's `cross-vm` feature. Paths reach up out of
# this workspace into the root workspace's crates (cargo allows cross-workspace path deps).
cross-vm-cosmwasm = { path = "../../crates/cosmwasm" }
cross-vm-macros = { path = "../../crates/macros" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true

[profile.release.package."*"]
opt-level = "z"
