[package]
name = "cross-vm-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Declarative TOML/JSON run-config schema for cross-vm-testing (pure data, no framework/tokio/chain deps)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
serde_json.workspace = true
humantime.workspace = true
thiserror.workspace = true

[lints]
workspace = true
