[package]
name = "cross-vm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared chain-provider abstractions for the cross-vm testing suite"

[dependencies]
thiserror.workspace = true
# Wallet factory: load mnemonic secrets from .env, generate/parse BIP-39 phrases,
# and guard per-wallet broadcasts with an async (current-thread-safe) mutex.
dotenvy.workspace = true
bip39.workspace = true
tokio.workspace = true
