[package]
name = "cross-vm-framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-VM testing framework: hold and drive CosmWasm, EVM, Solana, and Tron chains in one simulation"

[dependencies]
cross-vm-core.workspace = true
cross-vm-macros.workspace = true
cross-vm-cosmwasm = { workspace = true, optional = true }
cross-vm-solidity = { workspace = true, optional = true }
cross-vm-solana = { workspace = true, optional = true }
cross-vm-tron = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
# Emit per-operation / per-invariant debug logs through the tracing facade.
tracing.workspace = true
# Property testing: portable, seedable RNG (ChaCha) for deterministic, replayable runs.
rand.workspace = true
rand_chacha.workspace = true
# Optional zero-boilerplate stateless operation generation.
arbitrary = { workspace = true, optional = true }

[features]
default = ["cw", "evm", "solana", "tron"]
# Per-ecosystem gates. Each pulls in its provider crate and enables that VM's variants,
# accessors, and match arms across the framework. Drop the ones you do not test to trim the
# dependency tree (revm, litesvm, cw-multi-test, tron TVM) and compile time.
cw = ["dep:cross-vm-cosmwasm"]
evm = ["dep:cross-vm-solidity"]
solana = ["dep:cross-vm-solana"]
tron = ["dep:cross-vm-tron"]
# Enables `sample_arbitrary` + the `arbitrary` derive path for stateless op generation.
fuzz = ["dep:arbitrary"]

[dev-dependencies]
# `#[tokio::test]` in src/tests.rs; `#[tokio::main]` in examples/.
tokio.workspace = true
# Solana system-program transfer used by examples/wallet_quickstart.rs.
solana-system-interface.workspace = true

[lints]
workspace = true
