[package]
name = "cross-vm-framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-VM testing framework: hold and drive CosmWasm, EVM, Solana, and Tron chains in one simulation"

[dependencies]
cross-vm-core.workspace = true
cross-vm-macros.workspace = true
cross-vm-cosmwasm = { workspace = true, optional = true }
cross-vm-solidity = { workspace = true, optional = true }
cross-vm-solana = { workspace = true, optional = true }
cross-vm-tron = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
# Emit per-operation / per-invariant debug logs through the tracing facade.
tracing.workspace = true
# Property testing: portable, seedable RNG (ChaCha) for deterministic, replayable runs.
rand.workspace = true
rand_chacha.workspace = true
# Optional zero-boilerplate stateless operation generation.
arbitrary = { workspace = true, optional = true }
# `cli`-only: the declarative run-config schema the `config` module bridges into framework types.
cross-vm-config = { workspace = true, optional = true }
# `cli`-only: CLI argument parsing (Task 7).
clap = { workspace = true, optional = true }
# `cli`-only: `ResolvedProfile`/`ChainSpecData` construction needs `serde::Serialize` reachable
# on the outcome/stats types in a later task (Task 11); declaring the feature now is correct per
# the plan even though no `#[derive(Serialize)]` is added in this task.
serde = { workspace = true, optional = true }
# `cli`-only: `--json-report` (Task 7) and JSON config input (already in cross-vm-config).
serde_json = { workspace = true, optional = true }
# `cli`-only: `.env` secret loading for the CLI binary (Task 7/10).
dotenvy = { workspace = true, optional = true }
# `cli`-only: the CLI's tracing-subscriber fmt layer (Task 7).
tracing-subscriber = { workspace = true, optional = true }
# `cli`-only: `ChainSpecData::params` and inline config tables.
toml = { workspace = true, optional = true }
# `cli`-only: `SpecId` (`revm::primitives::hardfork::SpecId`) is a field type on `ChainSpecData`
# regardless of which VM features are on, but neither `cross-vm-solidity` nor `cross-vm-tron`
# re-export the type, so the framework needs its own direct dependency to name it. Not in the
# brief's literal optional-dep list, but required for `ChainSpecData`/`build_chain` to compile.
revm = { workspace = true, optional = true }

[features]
default = ["cw", "evm", "solana", "tron"]
# Per-ecosystem gates. Each pulls in its provider crate and enables that VM's variants,
# accessors, and match arms across the framework. Drop the ones you do not test to trim the
# dependency tree (revm, litesvm, cw-multi-test, tron TVM) and compile time.
cw = ["dep:cross-vm-cosmwasm"]
evm = ["dep:cross-vm-solidity"]
solana = ["dep:cross-vm-solana"]
tron = ["dep:cross-vm-tron"]
# Enables `sample_arbitrary` + the `arbitrary` derive path for stateless op generation.
fuzz = ["dep:arbitrary"]
# Adds `Serialize` reachability for outcome/stats types (the derives themselves land in Task 11).
serde = ["dep:serde"]
# The config-driven CLI: TOML/JSON run configs, chain construction, profile resolution, and (in
# later tasks) the registry and the `cross-vm` binary's argument parsing.
cli = [
    "serde",
    "dep:cross-vm-config",
    "dep:clap",
    "dep:serde_json",
    "dep:dotenvy",
    "dep:tracing-subscriber",
    "dep:toml",
    "dep:revm",
    # ctrl-c handling for the endurance runner's cooperative stop flag (Task 10); tokio is a
    # mandatory workspace dep with a fixed feature set, so `cli` adds the extra feature to the
    # existing dependency rather than redeclaring it.
    "tokio/signal",
]

[dev-dependencies]
# `#[tokio::test]` in src/tests.rs; `#[tokio::main]` in examples/.
tokio.workspace = true
# Solana system-program transfer used by examples/wallet_quickstart.rs.
solana-system-interface.workspace = true

[lints]
workspace = true
