[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Config-driven CLI, registry, and run pipeline for harness-core, extensible via CliDomain"
repository.workspace = true

[dependencies]
harness-core = { workspace = true, features = ["serde"] }
harness-config.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time", "signal"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
humantime.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
