[package]
name = "harness-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Declarative TOML/JSON run-config schema for harness-core (pure data, no runtime deps), extensible via ConfigExt"

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
serde_json.workspace = true
humantime.workspace = true
thiserror.workspace = true

[lints]
workspace = true
