[package]
name = "harness-core-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Attribute macros for harness-core: #[fuzz_runner], #[invariant_runner], #[endurance_runner]"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
