[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Property-testing harness and runner: fuzz, invariant, endurance, and scenario modes over a user-defined (Ctx, World)"

[dependencies]
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true
arbitrary = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
# Enables `sample_arbitrary` for stateless op generation.
fuzz = ["dep:arbitrary"]
# Serialize impls on outcome/stats types (reports, JSON output).
serde = ["dep:serde"]

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true

[lints]
workspace = true
