[package]
name = "cross-vm-solana"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Solana (SVM) chain provider (litesvm) for the cross-vm testing suite"

[dependencies]
cross-vm-core.workspace = true
thiserror.workspace = true
litesvm = "0.13"
solana-address = "1"
solana-account = "3"
solana-clock = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-native-token = "3"
solana-signer = "3"
solana-system-interface = { version = "2", features = ["bincode"] }
solana-transaction = "3"
