[package]
name = "cross-vm-solana"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Solana (SVM) chain provider (litesvm) for the cross-vm testing suite"

[dependencies]
cross-vm-core.workspace = true
cross-vm-macros.workspace = true
thiserror.workspace = true
litesvm = "0.13"
solana-address = "1"
solana-account = "3"
solana-clock = "3"
solana-instruction = "3"
# `seed-derivable` enables BIP-39 seed + SLIP-10 ed25519 HD derivation (keypair_from_seed_and_derivation_path).
solana-keypair = { version = "3", features = ["seed-derivable"] }
solana-derivation-path = "3"
solana-message = "4"
solana-native-token = "3"
# Mint the synthetic base58 signature litesvm's account-store program load cannot produce.
solana-sha256-hasher = "3"
solana-signature = "3"
solana-signer = "3"
solana-system-interface = { version = "2", features = ["bincode"] }
solana-transaction = "3"
# Live-RPC provider: thin JSON-RPC client over reqwest, base64 for getAccountInfo data.
reqwest.workspace = true
serde_json.workspace = true
base64 = "0.22"
# BIP-39 mnemonic -> seed for wallet derivation.
bip39.workspace = true
# Async mutex for the per-wallet broadcast lock (held across await on a current-thread rt).
tokio.workspace = true

[features]
# Opt-in, default-off. Enables the concrete public/well-known chain preset instances
# (`SOLANA_DEVNET`, `SOLANA_LOCALNET`, `SOLANA_MAINNET`, `SOLANA_TESTNET`) in `chains`. These
# exist only for our own internal testing convenience; downstream consumers should define their
# own chain configs from the `SolanaChainInfo` / builder / `sugar` types, which stay public.
presets = []

[dev-dependencies]
tokio.workspace = true
# Self dev-dependency to force-enable `presets` for this crate's own tests, doctests, and
# examples without leaking the feature into a downstream default build.
cross-vm-solana = { path = ".", features = ["presets"] }

# Quickstart examples demonstrate the (opt-in) presets, so they require the `presets` feature.
# This keeps `cargo build --workspace` (no features) from trying to build them.
[[example]]
name = "solana_quickstart"
path = "examples/solana_quickstart.rs"
required-features = ["presets"]

[[example]]
name = "solana_rpc_quickstart"
path = "examples/solana_rpc_quickstart.rs"
required-features = ["presets"]

[lints]
workspace = true
