[package]
name = "cross-vm-solidity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "EVM/Solidity chain provider (revm) for the cross-vm testing suite"

[dependencies]
cross-vm-core.workspace = true
cross-vm-revm-common.workspace = true
revm.workspace = true
# Ethereum value types (Address/Bytes/U256/keccak256). alloy-primitives is the crate revm
# itself re-exports, so the single shared version unifies and types match at the revm boundary.
alloy-primitives.workspace = true
# Full alloy for the live-RPC provider (HTTP transport, JSON-RPC, eth rpc types).
alloy.workspace = true
# Local signer with BIP-39 mnemonic derivation (MnemonicBuilder/PrivateKeySigner). The
# `mnemonic` feature pulls in coins-bip39, which alloy's `full` does not enable.
alloy-signer-local.workspace = true
# Generic JSON-RPC escape hatch (`raw_request`) carries free-form params/results.
serde_json.workspace = true
thiserror.workspace = true
# Async mutex for the per-wallet broadcast lock (held across await on a current-thread rt).
tokio.workspace = true

[features]
# Opt-in, default-off. Enables the concrete public/well-known chain preset instances
# (`ARBITRUM`, `BASE`, `BASE_SEPOLIA`, `ETHEREUM`, `LOCAL`, `OPTIMISM`, `POLYGON`, `SEPOLIA`) in
# `chains`. These exist only for our own internal testing convenience; downstream consumers should
# define their own chain configs from the `EvmChainInfo` / builder / `sugar` types, which stay public.
presets = []

[dev-dependencies]
tokio.workspace = true
cross-vm-macros.workspace = true
# Load `.env` into the process environment for the live onchain test.
dotenvy.workspace = true
# Self dev-dependency to force-enable `presets` for this crate's own tests, doctests, and
# examples without leaking the feature into a downstream default build.
cross-vm-solidity = { path = ".", features = ["presets"] }

# Quickstart examples demonstrate the (opt-in) presets, so they require the `presets` feature.
# This keeps `cargo build --workspace` (no features) from trying to build them.
[[example]]
name = "evm_quickstart"
path = "examples/evm_quickstart.rs"
required-features = ["presets"]

[[example]]
name = "evm_rpc_quickstart"
path = "examples/evm_rpc_quickstart.rs"
required-features = ["presets"]

[lints]
workspace = true
