[package]
name = "cross-vm-tron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tron (TVM) chain provider for the cross-vm testing suite"

[dependencies]
cross-vm-core.workspace = true
revm.workspace = true
# Ethereum value types (Address/Bytes/U256/keccak256). alloy-primitives is the crate revm
# re-exports, so the single shared version unifies and types match at the revm boundary.
alloy-primitives.workspace = true
# alloy primitives carry the value types; full alloy is unused (Tron RPC uses TronGrid HTTP).
# Live java-tron RPC over the TronGrid HTTP REST API (no Tron-specific dependency).
reqwest.workspace = true
serde_json.workspace = true
hex.workspace = true
# Local signer with BIP-39 mnemonic derivation (secp256k1, same curve as Tron accounts).
alloy-signer-local.workspace = true
thiserror.workspace = true
# Async mutex for the per-wallet broadcast lock (held across await on a current-thread rt).
tokio.workspace = true
# Tron address codec + hashing (generic crates; NOT a Tron-specific dependency).
bs58.workspace = true
sha2.workspace = true
sha3.workspace = true
k256.workspace = true

[dev-dependencies]
tokio.workspace = true
cross-vm-macros.workspace = true
# Load `.env` into the process environment for the live onchain test.
dotenvy.workspace = true

[lints]
workspace = true
